# book_recommender

./: .gitignore  README.md  frontend.py  main.py  pyproject.toml  requirements.txt
scripts/: build_embeddings.py  chat.py  visualize_embeddings.py
src/: __init__.py  chat.py  encoder.py  prompt_enhancer.py  prompt_receiver.py  retrieval.py
