[project]
name = "book-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "numpy>=1.26.0",
    "openai>=2.32.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.12.0",
    "torch>=2.0.0",
]
